Fix scrollbar

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -158,7 +158,7 @@ transition: 0.5s linear all; }
 #right_column h3 a{color: black; text-decoration: none;}
 #right_column h3 a:visited{color: black; }
 #right_column h4 a{font-size: 25px;letter-spacing: -1px;text-decoration: none;color: #FF3399;}
-.dixit_text.nano { width: 80%; height: 50%; padding-right: 20%;  }
+#right_column .dixit_text.nano { width: 80%; height: 50%; padding-right: 20%;  }
 /*.dixit_text.nano .content { padding: 0 20% 0 0; }*/
 
 .prev_next{position:fixed; bottom:40px; margin-left:20px;font-size:14px; font-weight:bold;}
